--- a/style.css
+++ b/style.css
@@ -11,31 +11,35 @@ License URI: LICENSE
 Text Domain: kerapy
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
-
 body {
     font-family: "Inter", sans-serif;
-    
+
 }
 
-.sub-head{
+.sub-head {
     font-size: 14px;
     line-height: 130%;
     letter-spacing: 1px;
     color: #0052A8;
 }
 
-.star{
+.star {
     width: 24px;
     height: 24px;
 }
 
-p{
+p {
     font-size: 16px !important;
-    color:#666666 !important;
+    color: #666666 !important;
     line-height: 180% !important;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Onest", sans-serif;
     font-weight: 500;
 }
@@ -140,11 +144,11 @@ p {
     }
 }
 
-.hero-head{
+.hero-head {
     color: #0052A8;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: "Onest", sans-serif;
     font-weight: 700;
     font-size: 32px;
@@ -152,13 +156,13 @@ p {
 
 }
 
-.btn-outline-dark{
+.btn-outline-dark {
     border-radius: 50px;
     padding: 16px 32px;
 }
 
 @media screen and (max-width: 480px) {
-    .btn-outline-dark{
+    .btn-outline-dark {
         border-radius: 50px;
         padding: 8px 16px;
     }
@@ -170,8 +174,8 @@ p {
     background-color: #00DCC2;
     color: #000000;
     text-align: center;
-    text-decoration: none; 
-    display: inline-block; 
+    text-decoration: none;
+    display: inline-block;
     transition: 0.5s;
     font-family: Onest;
     font-size: 16px;
@@ -182,24 +186,24 @@ p {
 }
 
 @media screen and (max-width: 480px) {
-    .primary-button{
+    .primary-button {
         padding: 8px 16px;
     }
 }
 
 .primary-button:hover {
-    background-color: #00aa9c; 
+    background-color: #00aa9c;
     text-decoration: none;
-     
+
 }
 
-.divider{
+.divider {
     height: 2px;
     width: 30px;
     background-color: #0052A8;
 }
 
-.review-img{
+.review-img {
     width: 60px;
     height: 60px;
     border-radius: 100px;
@@ -208,11 +212,11 @@ p {
 
 
 
-.fa-regular{
+.fa-regular {
     color: #0052A8;
 }
 
-.cta{
+.cta {
     background-color: #0052A8;
 }
 
@@ -221,7 +225,7 @@ p {
     color: #031A0680;
 }
 
-#news{
+#news {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.616)), url('images/Hero_v2_blog.jpg');
     background-size: cover;
     background-position: center;
@@ -237,16 +241,16 @@ img {
     display: block;
 }
 
-.service-icon{
+.service-icon {
     color: #0052A8;
 }
 
 
-.why-choose-blue{
+.why-choose-blue {
     background-color: #0052A8;
 }
 
-.hero-v4-last{
+.hero-v4-last {
     background-color: #0052A8;
 }
 
@@ -259,9 +263,9 @@ img {
     text-align: center;
     padding: 20px;
     position: relative;
-  }
+}
 
-  .circle {
+.circle {
     width: 80px;
     height: 80px;
     background-color: #0052A8;
@@ -274,55 +278,57 @@ img {
     font-weight: bold;
     margin-bottom: 10px;
     position: relative;
-    z-index: 1; 
-  }
+    z-index: 1;
+}
 
-  
-  .box::before {
+
+.box::before {
     content: '';
     position: absolute;
-    top: 20%; 
+    top: 20%;
     left: 0;
     right: 0;
     height: 5px;
     background-color: #0052A8;
-    z-index: 0; 
-  }
-
- 
-  .box:first-child::before {
-    left: 50%; 
-  }
-  
-  .box:last-child::before {
-    right: 50%; 
-  }
-
-  
+    z-index: 0;
+}
 
 
-  @media (max-width: 768px) {
+.box:first-child::before {
+    left: 50%;
+}
+
+.box:last-child::before {
+    right: 50%;
+}
+
+
+
+
+@media (max-width: 768px) {
     .container py-md-4 {
-      display: block; 
+        display: block;
     }
-    .box {
-      display: flex; 
-      justify-content: center;
-      align-items: center;
-      flex-direction: column; 
-      margin-bottom: 20px; 
-    }
-    .box::before {
-      display: none; 
-    }
-  }
 
-  .video-wrapper {
+    .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+
+    .box::before {
+        display: none;
+    }
+}
+
+.video-wrapper {
     position: relative;
     cursor: pointer;
-  }
-  
-  .play-btn {
+}
+
+.play-btn {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -333,49 +339,49 @@ img {
     width: 100px;
     height: 100px;
     background: #8a8a8a1f;
-    backdrop-filter: blur(7px); 
+    backdrop-filter: blur(7px);
     border-radius: 50%;
-    text-decoration: none; 
+    text-decoration: none;
     transition: background-color 0.3s ease;
-  }
-  
-  .play-btn:hover {
-    background-color: rgba(255, 255, 255, 0.3); 
-  }
-  
-  .play-icon {
+}
+
+.play-btn:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.play-icon {
     font-size: 1.5rem;
     color: #fff;
-  }
+}
 
 
-  .cta-bg-img {
+.cta-bg-img {
     background-image: linear-gradient(#0052A8D9, #0052A8D9), url('images/Hero_v3_cta.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
     z-index: 1;
-  }
+}
 
 
-  .bg-img-banner {
-    background-image: linear-gradient(90deg, #0052A8 50%, #ffffff00 ), url('images/About_v2_banner.jpg');
+.bg-img-banner {
+    background-image: linear-gradient(90deg, #0052A8 50%, #ffffff00), url('images/About_v2_banner.jpg');
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
     position: relative;
     z-index: 1;
-  }
+}
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     .bg-img-banner {
         background-image: none;
         background-color: #0052A8;
     }
 }
 
-  .form-control {
+.form-control {
     border-radius: 0;
     border: 1px solid #031A06;
 }
@@ -387,26 +393,27 @@ img {
     background-color: #00DCC2;
     color: #000000;
     text-align: center;
-    text-decoration: none; 
-    display: inline-block; 
+    text-decoration: none;
+    display: inline-block;
     transition: 0.5s;
 }
 
 @media screen and (max-width: 480px) {
-    .btn-custom{
+    .btn-custom {
         padding: 8px 16px;
     }
 }
 
 .btn-custom:hover {
-    background-color: #00aa9c; 
+    background-color: #00aa9c;
     text-decoration: none;
-     
+
 }
 
 #map {
     width: 100%;
-    height: 500px; /* Adjust height as needed */
+    height: 500px;
+    /* Adjust height as needed */
 }
 
 footer {
@@ -419,7 +426,7 @@ footer {
     /* line-height: 28.28px; */
 }
 
-.footer-list-item a:hover  {
+.footer-list-item a:hover {
     color: #00DCC2 !important;
 }
 
@@ -463,7 +470,7 @@ footer .social-icon:hover {
     margin-bottom: 20px;
 }
 
-.footer-input::placeholder{
+.footer-input::placeholder {
     color: #fff;
 }
 
@@ -472,8 +479,8 @@ footer .bottom-link {
     font-size: 14px;
 }
 
-.service-details-gradient{
-    background-image: linear-gradient(90deg,  rgb(255, 255, 255) 50% , transparent), url('images/Service_v2_child.jpg');
+.service-details-gradient {
+    background-image: linear-gradient(90deg, rgb(255, 255, 255) 50%, transparent), url('images/Service_v2_child.jpg');
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -485,8 +492,8 @@ footer .bottom-link {
     }
 }
 
-.service-details-gradient-right{
-    background-image: linear-gradient(90deg, transparent, rgb(255, 255, 255) 50% ), url('images/Service_v2_adult.jpg');
+.service-details-gradient-right {
+    background-image: linear-gradient(90deg, transparent, rgb(255, 255, 255) 50%), url('images/Service_v2_adult.jpg');
     background-repeat: no-repeat;
     background-position: left;
 }
@@ -498,8 +505,8 @@ footer .bottom-link {
     }
 }
 
-.service-details-gradient-left{
-    background-image: linear-gradient(90deg, white 50% , transparent), url('images/Service_v2_senior.jpg');
+.service-details-gradient-left {
+    background-image: linear-gradient(90deg, white 50%, transparent), url('images/Service_v2_senior.jpg');
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -516,20 +523,25 @@ footer .bottom-link {
     border-left: 2px solid #0052A8;
     padding-left: 15px;
     margin-left: 0;
-  }
+}
 
-  .blockquote p{
+.blockquote p {
     font-size: 20px !important;
     line-height: 180% !important;
     color: #000000 !important;
     font-weight: 400 !important;
-  }
+}
 
-  .custom-shadow {
+.custom-shadow {
     box-shadow: 0px 20px 20px -10px #5987B733;
 }
 
-.landing-cta{
+.kerapy-blockquote p {
+    border-left: 2px solid #00DCC2 !important;
+    padding-left: 15px;
+}
+
+.landing-cta {
     background-image: url('images/Demo_footer.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -543,7 +555,7 @@ footer .bottom-link {
     background-color: #0052A8;
 }
 
-.footer-logo{
+.footer-logo {
     color: #00DCC2;
 }
 
@@ -565,7 +577,7 @@ footer .bottom-link {
     color: #fff !important;
 }
 
-.gray-bg{
+.gray-bg {
     background-color: #FFFFFF33;
 }
 
@@ -577,14 +589,14 @@ footer .bottom-link {
 }
 
 .testimonial-slider .owl-nav button {
-    background-color: #00000000!important;
-    border-radius: 50px!important;
-    border: 1px solid #00000050!important;
+    background-color: #00000000 !important;
+    border-radius: 50px !important;
+    border: 1px solid #00000050 !important;
 }
 
 .testimonial-slider .owl-nav button:hover {
-    background-color: #00DCC2!important;
-    border: 1px solid #00DCC2!important;
+    background-color: #00DCC2 !important;
+    border: 1px solid #00DCC2 !important;
 }
 
 .testimonial-slider .owl-nav {
@@ -611,14 +623,14 @@ footer .bottom-link {
 }
 
 .testimonial-box .owl-nav button {
-    background-color: #00000000!important;
-    border-radius: 50px!important;
-    border: 1px solid #00000050!important;
+    background-color: #00000000 !important;
+    border-radius: 50px !important;
+    border: 1px solid #00000050 !important;
 }
 
 .testimonial-box .owl-nav button:hover {
-    background-color: #00DCC2!important;
-    border: 1px solid #00DCC2!important;
+    background-color: #00DCC2 !important;
+    border: 1px solid #00DCC2 !important;
 }
 
 .testimonial-box .owl-nav {
