--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
 }
 
 p {
-    font-size: 16px !important;
-    color: #666666 !important;
-    line-height: 180% !important;
+    font-size: 16px;
+    color: #666666;
+    line-height: 180%;
 }
 
 h1,
