wip with theme errors

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Theme Name: Kerapy
-Theme URI: http://underscores.me/
+Theme URI: http://eleganceincode.com/
 Author: Nibir
 Author URI: https://nibirahmed.com
 Description: Description
@@ -7,7 +7,7 @@ Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
-License URI: LICENSE
+License URI: GPLv2
 Text Domain: kerapy
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
