--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ a{
     font-size: 14px;
     line-height: 130%;
     letter-spacing: 1px;
-    color: #0052A8;
 }
 
 .star {
@@ -35,9 +34,10 @@ a{
 }
 
 p {
-    font-size: 16px !important;
-    color: #666666 !important;
-    line-height: 170% !important;
+    font-size: 16px;
+    color: #666666;
+    line-height: 170% ;
+    margin: 0px !important;
 }
 
 h1,
@@ -48,6 +48,7 @@ h5,
 h6 {
     font-family: "Onest", sans-serif;
     font-weight: 500;
+    margin: 0px !important;
 }
 
 
@@ -646,15 +647,14 @@ footer .bottom-link {
 
 .testimonial-slider .owl-nav button {
     background-color: #00000000 !important;
-    border-radius: 50px !important;
-    border: 1px solid #00000050 !important;
+    border-radius: 50px ;
+    border: 1px solid #00000050 ;
     margin: 5px !important;
     
 }
 
 .testimonial-slider .owl-nav button:hover {
-    background-color: var(--primary) !important;
-    border: 1px solid var(--primary) !important;
+    border:transparent !important; 
 }
 
 .testimonial-slider .owl-nav {
@@ -1087,17 +1087,16 @@ footer .bottom-link {
     left: 0;
 } 
 .categori-color{
-    font-size: 16px !important;
-    color: #666666 !important;
-    line-height: 180% !important;
+    font-size: 16px ;
+    line-height: 180% ;
 }
 
 .counter{
-    font-size: 48px !important;
+    font-size: 48px ;
     line-height: 120%;
 }
 .counter-plus span{
-    font-size: 48px !important;
+    font-size: 48px;
     line-height: 120%;
 }
 .counter-sec {
@@ -1106,31 +1105,36 @@ footer .bottom-link {
     justify-content: center;
     align-items: center;
 }
+
+/* accordion */
 .accordion-header button{
     border-radius: inherit !important;
-    padding: 24px 20px 24px 20px !important;
+    padding: 24px 20px 24px 20px;
 }
 @media (max-width: 540px) {
     .accordion-header button{
-        padding: 20px 16px 20px 16px !important;
+        padding: 20px 16px 20px 16px;
     }
 }
-.accordion-button:not(.collapsed) {
-    color: var(--bs-accordion-active-color);
-    background-color: var(--bs-accordion-active-bg);
-}
+
 .accordion-button{
-    font-size: 16px !important;
-    font-family: inherit !important;
-    font-weight: 500 !important;
+    font-size: 16px ;
+    font-family: inherit ;
+    font-weight: 500 ;
 }
+.accordion-button:not(.collapsed) {
+    box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
+.accordion-button.collapsed {
+    box-shadow: none !important;
+}
+
 .review-img img {
     object-fit: cover;
 }
 .review-img {
     width: 60px !important;
     height: 60px !important;
-    border-radius: 100px !important;
 }
 .review-img:not(:first-child) {
     margin-left: -20px !important;
@@ -1162,14 +1166,28 @@ footer .bottom-link {
     margin-top: 6px;
 }
 .list-icon svg, .list-icon svg path, .list-icon i {
-    fill: currentColor; /* Matches the color property */
-    stroke: currentColor; /* Matches the color property */
+    fill: currentColor; 
+    stroke: currentColor;
 }
 .list-description p{
     color:inherit !important;
 }
+/* .list-content{
+    display: flex;
+    flex-direction: column;
+} */
+
+/* team-section */
 .team-img{
     aspect-ratio: 1/1;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+}
+.team-all-card{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .sectionicon svg {
     width: 20px;
@@ -1177,7 +1195,6 @@ footer .bottom-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #0052A8;
 }
 .sectionicon i{
     width: 20px;
@@ -1185,7 +1202,6 @@ footer .bottom-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #0052A8;
 }
 .sectionicon svg path {
     fill: currentColor;
@@ -1267,11 +1283,11 @@ footer .bottom-link {
 }
 
 /* client-reviews-section */
-.client-reviews-section {
+/* .client-reviews-section {
     border-left: 2px  dashed #3fbccb;
     border-bottom: 2px dashed #3fbccb;
     padding: 40px 0px 40px 4px;
-}
+} */
 @media screen and (max-width: 540px) {
     .client-reviews-section {
         width: 100%; 
@@ -1330,3 +1346,11 @@ footer .bottom-link {
 .all-heading-color p {
     color: inherit !important;
 }
+/* review widget */
+.review_number{
+    font-weight: 600;
+}
+.team-content{
+    padding-bottom: 24px;
+}
+
